feat: add CategoriesPreview component with pagination and proper 3-column layout

--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -27,3 +27,4 @@
 @import "shortcode/gallery";
 @import "shortcode/VideoPopUp";
 @import "shortcode/pagination";
+@import "shortcode/categoriespreview";
