--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -32,3 +32,4 @@
 @import 'common/videosection';
 @import "shortcode/sidebar";
 @import 'shortcode/truck-gallery';
+@import 'shortcode/singletruck';
