--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -40,3 +40,8 @@
 @import "shortcode/product-catalog";
 @import "shortcode/product-card";
 @import "shortcode/category-ecommerce";
+@import "shortcode/product-hero";
+@import "shortcode/product-gallery";
+@import "shortcode/product-info";
+@import "shortcode/product-tabs";
+@import "shortcode/related-products";
