--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -45,3 +45,4 @@
 @import "shortcode/product-info";
 @import "shortcode/product-tabs";
 @import "shortcode/related-products";
+@import "shortcode/product-immersive";
